[package]
name = "datafusion-functions-json"
version = "0.45.0"
edition = "2021"
description = "JSON functions for DataFusion"
readme = "README.md"
license = "Apache-2.0"
keywords = ["datafusion", "JSON", "SQL"]
categories = ["database-implementations", "parsing"]
repository = "https://github.com/datafusion-contrib/datafusion-functions-json/"
rust-version = "1.81.0"

[dependencies]
datafusion = { git = "https://github.com/openobserve/datafusion", rev = "e319d35a8277b4f40eae0279ce12470e76df4d39" }
jiter = "0.8"
paste = "1"
log = "0.4"

[dev-dependencies]
datafusion = { git = "https://github.com/openobserve/datafusion", rev = "e319d35a8277b4f40eae0279ce12470e76df4d39", default-features = false, features = [
    "nested_expressions",
] }
codspeed-criterion-compat = "2.6"
criterion = "0.5.1"
clap = "4"
tokio = { version = "1.38", features = ["full"] }

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"

# in general, we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "deny", priority = -1 }

[[bench]]
name = "main"
harness = false
